--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -38,8 +38,14 @@
             </div>
 
             <!--下载客户端 -->
-            <a href="http://60.205.86.217/upload5/winRelease/小蚂蚁同步课堂 Setup 1.3.6.exe" class="downPc" style="display: none;"
+            <a href="http://60.205.86.217/upload5/winRelease/小蚂蚁同步课堂 Setup 1.3.6.exe" class="downPc left" style="display: none;"
                 id="download_pc">下载PC客户端</a>
+            <div class="downPhone">
+                <a>下载手机客户端</a>
+                <div class="download-pop-up">
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
     </div>
 
