--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -43,6 +43,10 @@
             <!--下载客户端 -->
             <a href="http://60.205.86.217/upload5/winRelease/小蚂蚁同步课堂 Setup 1.3.6.exe" class="downPc" style="display: none;"
                 id="download_pc">下载PC客户端</a>
+            
+            <!-- 下载手机客户端 -->
+            <span>下载手机客户端</span>
+            <div>二维码图</div>
         </div>
     </div>
 
