--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -28,15 +28,19 @@
                     <div class="downPhone">
                         <img src="img/icon_ios.png" alt="">
                         <div class="download-pop-up">
+                            <div>苹果手机端</div>
                             <img src="http://60.205.86.217/upload9/2019-02-26/21/d07c11de-e041-41be-84b7-f96f1ca349eb.png" alt="">
-                            <div>苹果手机端下载</div>
+
                         </div>
                     </div>
-                    <div  class="downPhone">
+                    <div  class="downPhone android">
                         <img src="img/icon_android.png" alt="">
                         <div class="download-pop-up">
+                            <div>
+                                安卓手机端<br/>
+                            </div>
                             <img src="http://60.205.86.217/upload9/2019-02-26/21/eaa4e923-0cc2-4609-bdef-1df15d8d425a.png" alt="">
-                            <div>安卓手机端下载</div>
+                            <span>仅支持7.0以上系统</span>
                         </div>
                     </div>
                     <div class="downPhone downPcNew" id="download_pc" style="display: none;">
