--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -40,7 +40,7 @@
                                 安卓手机端<br/>
                             </div>
                             <img src="http://60.205.86.217/upload9/2019-02-26/21/eaa4e923-0cc2-4609-bdef-1df15d8d425a.png" alt="">
-                            <span>仅支持7.0以上系统</span>
+                            <span>仅支持8.0及以上系统</span>
                         </div>
                     </div>
                     <div class="downPhone downPcNew" id="download_pc" style="display: none;">
