--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -28,7 +28,7 @@
                     <div class="downPhone">
                         <img src="img/icon_ios.png" alt="">
                         <div class="download-pop-up">
-                            <div>苹果手机端</div>
+                            <div>苹果手机端下载</div>
                             <img src="http://60.205.86.217/upload9/2019-02-26/21/d07c11de-e041-41be-84b7-f96f1ca349eb.png" alt="">
 
                         </div>
@@ -37,7 +37,7 @@
                         <img src="img/icon_android.png" alt="">
                         <div class="download-pop-up">
                             <div>
-                                安卓手机端<br/>
+                                安卓手机端下载<br/>
                             </div>
                             <img src="http://60.205.86.217/upload9/2019-02-26/21/eaa4e923-0cc2-4609-bdef-1df15d8d425a.png" alt="">
                             <span>仅支持8.0及以上系统</span>
