--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -281,7 +281,7 @@
             $("#placeholder").hide()
             // console.log($("#placeholder").hide())
             accountArr = JSON.parse(localStorage.getItem("accountData")) == null ? accountArr : JSON.parse(localStorage.getItem("accountData"))
-            $("#actData").css("display", "block");
+            accountArr.length !=0 ? $("#actData").css("display", "block"):$("#actData").css("display", "none");
         });
     })
 </script>
