--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -280,7 +280,7 @@
         $("#act").focus(function () {
             $("#placeholder").hide()
             // console.log($("#placeholder").hide())
-            accountArr = JSON.parse(localStorage.getItem("accountData")) == null ? accountArr : JSON.parse(localStorage.getItem("accountData"))
+            accountArr = JSON.parse(localStorage.getItem("accountData")) == null ? accountArr : JSON.parse(localStorage.getItem("accountData"));
             accountArr.length !=0 ? $("#actData").css("display", "block"):$("#actData").css("display", "none");
         });
     })
