--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -289,6 +289,7 @@ video{
 
 </head>
 <body >
+	<div class="big_video_filter"></div>
    <div id="big_video" class="big_video_new" style="display: none;">
    </div>
 
