--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -1551,6 +1551,7 @@ video{
       loginProtocol.data.liveTitle=title;
       loginProtocol.data.livePassword=livePassword;
       loginProtocol.data.clazzId = getQueryString("clazzId");
+      loginProtocol.data.videoId = getQueryString("videoId");
       connection.connect(loginProtocol);
   }
 
